# BlackjackFlask

./: .gitignore  .readthedocs.yml  Dockerfile  README.md  config.py  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  requirements2.txt  run.py
.docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  dev-requirements.txt
.github/: dependabot.yml
.github/workflows/: docker_build.yml
app/: __init__.py
app/blackjack/: __init__.py  models.py  routes.py
app/data/: blackjack_strategy.csv  strategy.config  strategy.json
app/static/css/: style.css
app/static/images/cards/: package-lock.json  package.json
app/static/js/: game.js
app/templates/: base.html  game.html  index.html  result.html
app/utils/: __init__.py  helpers.py
docs/: diagram.mmd  routes
docs/source/: api_endpoints.rst  conf.py  game_rules.rst  index.rst  installation.rst  introduction.rst  usage.rst
scripts/: setup_docker.sh  setup_docker_linux.sh  setup_script.sh
tests/: __init__.py  test_config.py  test_game_logic.py  test_routes.py
