[tool.poetry]
name = "blackjack"
version = "0.1.0"
description = "A Blackjack game implemented using Flask."
authors = ["thomasthaddeus <thaddeus.r.thomas@gmail.com>"]
readme = "README.md"
packages = [{include = "blackjack", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-migrate = "^4.0"
flask-sqlalchemy = "^2.5"
pymongo = "^4.1"
gunicorn = "^22.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
sphinx = "^7.3"
sphinx-rtd-theme = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sphinx]
project = "Blackjack Flask Application"
author = "Thomas Thaddeus"
version = "0.1"
release = "0.1"
extensions = ["sphinx.ext.autodoc", "sphinx.ext.napoleon"]
templates_path = ["_templates"]
exclude_patterns = []
html_theme = "sphinx_rtd_theme"
